--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+    <script src="scripts/main.js"></script>
     <link href="styles/style.css" rel="stylesheet" type="text/css">
   <head>  
     <meta charset="utf-8">
@@ -15,7 +16,7 @@
         <li>thinkers</li>
         <li>builders</li>
     </ul>
-    <p>working together to keep the Internet alive and accessible, so people worldwide
+    <p>Working together to keep the Internet alive and accessible, so people worldwide
       can be informed contributors and creators of the Web. We believe this act of 
       human collaboration across an open platform is essential to individual growth
       and our collective future. 
