--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <p>Read <a href="https://www.mozilla.org/en-US/about/manifesto/">Mozilla Manifesto </a> to learn even more abbout the values and princpiles that guide the pursuit
       of our mission.
       </p>
+      <button>Change user</button>
       <script src="scripts/main.js"></script>
   </body>
 </html>
